# budget_bot

./: bot.py  hello.py  pyproject.toml  readme.md  todo.md
src/budget_bot/: bot.py  firebase.py
src/budget_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_budget_bot.py  test_firebase.py
